configure intellij and others